[tool.poetry]
name = "dvmn-async-undeground-chat-gui"
version = "0.1.0"
description = ""
authors = ["Dmitriy Suchkov <Account.log@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.13"
tenacity = "^7.0.0"
anyio = "^3.1.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
asyncclick = "^8.0.1"
aiofiles = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
